tests/baselines/reference/constructorOverloads5.errors.txt
tests/cases/compiler/constructorOverloads5.ts(6,18): error TS2300: Duplicate identifier 'RegExp'.


==== tests/cases/compiler/constructorOverloads5.ts (1 errors) ====
     interface IArguments {}
    
     declare module M {
        export function RegExp(pattern: string): RegExp;
        export function RegExp(pattern: string, flags: string): RegExp;
        export class RegExp {
                     ~~~~~~
!!! error TS2300: Duplicate identifier 'RegExp'.
            constructor(pattern: string);
            constructor(pattern: string, flags: string);
            exec(string: string): string[];
            test(string: string): boolean;
            source: string;
            global: boolean;
            ignoreCase: boolean;
            multiline: boolean;
            lastIndex: boolean;
        }
    }
    